# kaftui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  init-kafka.sh  megapod-dustin1-1752417629953.json
src/: app.rs  event.rs  kafka.rs  main.rs  trace.rs  ui.rs  util.rs
src/app/: config.rs  export.rs  input.rs  mod.rs
src/kafka/: admin.rs  de.rs  mod.rs  schema.rs
src/ui/: logs.rs  mod.rs  notifications.rs  records.rs  schemas.rs  settings.rs  stats.rs  topics.rs  widget.rs
