[package]
name = "kaftui"
version = "0.1.0"
description = "A TUI application for interacting with Kafka."
authors = ["ddobervich@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bounded-vec-deque = "0.1.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.31"
ratatui = "0.29.0"
rdkafka = { version = "0.37.0", features = ["dynamic-linking", "sasl", "ssl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_json_path = "0.7.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
