[package]
name = "kaftui"
version = "0.1.0"
description = "A TUI application for interacting with Kafka."
authors = ["ddobervich@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
anyhow = "1.0.99"
apache-avro = "0.19.0"
async-trait = "0.1.68"
bounded-vec-deque = "0.1.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
config = { version = "0.15.14", features = ["json"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.31"
gethostname = "1.0.2"
java-properties = "2.0.0"
ratatui = "0.29.0"
rdkafka = { version = "0.38.0", features = ["dynamic-linking", "sasl", "ssl"] }
schema-registry-client = "0.4.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_json_path = "0.7.2"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
