[package]
name = "kaftui"
version = "0.1.0"
description = "A TUI application for interacting with Kafka."
authors = ["ddobervich@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
anyhow = "1.0.102"
apache-avro = "0.21.0"
async-trait = "0.1.89"
bounded-vec-deque = "0.1.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", features = ["json"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.32"
gethostname = "1.1.0"
java-properties = "2.0.0"
protofish = "0.5.3"
ratatui = "0.29.0"
rdkafka = { version = "0.39.0", features = ["dynamic-linking", "sasl", "ssl"] }
schema-registry-client = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
